refactored contact.jsx and footer components to fix overflow-x problem

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 }
 section {
   /* border: 2px solid red; */
-  padding-top: 10rem;
+  /* padding-top: 10rem; */
   /* width: 100vw;
   overflow-x: hidden; */
 }
