--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -5,7 +5,7 @@ header {
   justify-content: center;
   height: 100vh;
   color: white;
-  width: 100vw;
+  /* width: 100vw; */
   background: url(../../assets/Desktop\ -\ 3.png);
   background-position: center center;
   background-repeat: no-repeat;
